[project]
name = "redis-fastapi-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "redis>=7.0.1",
    "uvicorn[standard]>=0.38.0",
]

[tool.uv.scripts]
# FastAPI 서버 실행 (개발 모드)
dev = "uvicorn app.main:app --reload"
# FastAPI 서버 실행 (프로덕션 모드)
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
